name:                replay
version:             0.1.1.2
synopsis:            A monad for memoizing computations.
description:         Please see README.md
homepage:            https://github.com/fredefox/replay#readme
license:             BSD3
license-file:        LICENSE
author:              Frederik Hanghøj Iversen
maintainer:          fhi.1990@gmail.com
copyright:           Frederik Hanghøj Iversen
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , stack.yaml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Replay
                     , Control.Monad.Consumer
  build-depends:       base == 4.9.*
                     , time == 1.6.*
                     , mtl == 2.2.*
  default-language:    Haskell2010

executable replay
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , replay
                     , scotty == 0.11.*
                     , containers == 0.5.*
                     , text == 1.2.*
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       TestCase
                     , TestProp
  main-is:             Test.hs
  build-depends:       base
                     , replay
                     , QuickCheck == 2.8.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fredefox/replay
